# maid-web-backend

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
kennels/: kennels.maid
src/: main.rs
static/: index.html
