[package]
name = "maid-lang-web-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
maid-lang = "1.0.0"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
libc = "0.2.174"
os_pipe = "1.1"
gag = "1.0"