[package]
name = "maid-lang-web-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
maid-lang = "1.0.8"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
gag = "1.0"